--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
-<!-- Coding By CodingNepal - youtube.com/codingnepal -->
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">  
-    <title>Typing Speed Test Game | CodingNepal</title>
-    <link rel="stylesheet" href="style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8" />
+    <title>Typing Speed Test Game | Monish Roy</title>
+    <link rel="stylesheet" href="style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
     <div class="wrapper">
-      <input type="text" class="input-field">
+      <input type="text" class="input-field" />
       <div class="content-box">
         <div class="typing-text">
           <p></p>
@@ -40,6 +39,5 @@
 
     <script src="js/paragraphs.js"></script>
     <script src="js/script.js"></script>
-  
   </body>
 </html>
